--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<div class="main">
 			<div class="wrapper">
                 <div class="preloader">
-                    <div class="preloader__icon"><span></span></div>
+                    <div class="preloader__icon"></div>
                 </div>
                 <header class="header">
                     <div class="header__container">
